--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,8 +1,8 @@
-name: Build and deploy to GitHub Pages
+name: Build and Deploy
+
 on:
   push:
-    branches:
-      - main # change to your branch if different
+    branches: [main]
 
 permissions:
   contents: write
@@ -11,25 +11,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build and export (static)
-        run: npm run export
-
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
+      - run: npm ci
+      - run: npm run export
+      - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
-          # optional: configure the target branch (default gh-pages)
-          # publish_branch: gh-pages
